--- a/react-project/src/styles/style.css
+++ b/react-project/src/styles/style.css
@@ -259,31 +259,29 @@ a {
 /* INICIO DE SEGUNDA PANTALLA */
 
 .secondScreen {
+    perspective: 1px;
     width: 100%;
     height: 90em;
     background-color: #fff;
     text-align: center;
-    z-index: 0;
+    overflow: hidden;
 }
 
 .secondScreenIphone {
-    text-align: center;
     margin-top: 5em;
     height: 62em;
 }
 
-.flyImgSpanL1 {
+.flyImgDiv {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     position: absolute;
-    pointer-events: none;
-    display: block;
+    transform: translateZ(-2px) scale(3);
 }
 
-.flyImg {
-    position: absolute;
-    height: 100%;
-    vertical-align: bottom;
-    left: 0;
-}
+.flyImg {}
 
 
 /* INICIO DE TERCERA PANTALLA */
@@ -313,13 +311,24 @@ a {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 660px;
-    background-color: black;
+    height: 40em;
+    background-image: url(../../resources/images/video.gif);
+    background-size: cover;
+}
+
+.fourthScreen::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 40em;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, .2);
 }
 
 .fourthScreenContent {
     color: #fff;
     text-align: center;
+    z-index: 200;
 }
 
 
