--- a/react-project/src/styles/style.css
+++ b/react-project/src/styles/style.css
@@ -295,7 +295,35 @@ a {
 }
 
 .thirdScreenIphone {
-    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.chatBubble {
+    position: absolute;
+    background-image: url(../../resources/images/mobile2trans1033.png);
+    height: 120px;
+    width: 340px;
+    background-position: 0 -300px;
+    margin-top: 15em;
+    margin-left: -1em;
+    border-style: none;
+    cursor: pointer;
+}
+
+.chatBubble:hover {
+    background-position: 0 -420px;
+}
+
+.chatArrow {
+    position: absolute;
+    background-image: url(../../resources/images/mobile2trans1033.png);
+    height: 160px;
+    width: 390px;
+    background-position: 0 -525px;
+    margin-top: 21em;
+    border-style: none;
 }
 
 .thirdScreenContent {
