--- a/react-project/src/styles/style.css
+++ b/react-project/src/styles/style.css
@@ -259,12 +259,13 @@ a {
 /* INICIO DE SEGUNDA PANTALLA */
 
 .secondScreen {
-    perspective: 1px;
+    perspective: 100px;
     width: 100%;
     height: 90em;
     background-color: #fff;
     text-align: center;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .secondScreenIphone {
@@ -273,15 +274,63 @@ a {
 }
 
 .flyImgDiv {
+    content: " ";
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    width: 100em;
     position: absolute;
-    transform: translateZ(-2px) scale(3);
+    background-image: url(../../resources/images/img1.png);
+    background-size: cover;
+    transform: translateZ(10px) scale(0.2);
 }
 
-.flyImg {}
+.flyImg {
+    position: absolute;
+}
+
+.flyImg1 {
+    bottom: 0;
+    right: 0;
+    transform: scale(0.8);
+}
+
+.flyImg2 {
+    top: 0;
+    right: 0;
+    margin-right: -15em;
+    transform: scale(0.8);
+}
+
+.flyImg3 {
+    top: 1;
+    left: 0;
+    margin-left: -15em;
+    transform: scale(0.8);
+}
+
+.flyImg4 {
+    bottom: 0;
+    left: 0;
+    margin-left: 25em;
+    margin-bottom: 15em;
+    transform: rotateZ(50deg);
+}
+
+.flyImg5 {
+    bottom: 1;
+    left: 1;
+    margin-left: -10em;
+    margin-top: 10em;
+}
+
+.flyImg6 {
+    bottom: 0;
+    left: 0;
+    margin-left: 22em;
+    margin-bottom: 30em;
+}
 
 
 /* INICIO DE TERCERA PANTALLA */
